--- a/Lesson10-SVG绘图/demo.html
+++ b/Lesson10-SVG绘图/demo.html
@@ -114,7 +114,7 @@
 		  		<p>关注国内前端开发技术微信公众号</p>
 		 		<p>您将获取大量免费学习资源</p>
 			</div>
-			<a id="js-alert-btn" class="alert-btn" href="http://www.51rgb.com/weixingz/xdqianduan/index.html">立即前往关注</a> 
+			<a id="js-alert-btn" class="alert-btn" href="https://tycn.github.io/Practice/Lesson11-weinh5/index.html">立即前往关注</a> 
 		</div>
 	  	<div class="alert-footer clearfix"> 
 			<svg width="46px" height="42px" class="alert-footer-icon">
@@ -134,7 +134,7 @@
 			document.getElementById("js-sec-text").innerHTML = t,
 			setInterval(function() {
 				if (0 == t){
-					location.href="http://www.51rgb.com/weixingz/xdqianduan/index.html";//#时间到后跳转地址：http://www.51rgb.com/weixingz/xdqianduan/index.html
+					location.href="https://tycn.github.io/Practice/Lesson11-weinh5/index.html";//#时间到后跳转地址
 				}else {
 					t -= 1,
 					document.getElementById("js-sec-text").innerHTML = t;
