--- a/Lesson11-weinh5/index.html
+++ b/Lesson11-weinh5/index.html
@@ -19,7 +19,7 @@
         </div>
     <ul class="nav-box">
         <li>
-            <a href="http://www.51rgb.cn/video/column-7.htm" target="_blank">免费教程</a>
+            <a href="http://www.51rgb.cn/video/column-7.html" target="_blank">免费教程</a>
         </li>
         <li>
             <a href="https://jq.qq.com/?_wv=1027&k=5kdkw5p" target="_blank">加群学习</a>
