--- a/Lesson13-头部幻灯片/index.html
+++ b/Lesson13-头部幻灯片/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>头部导航二级下拉菜单</title>
+	<title>头部导航加banner幻灯片</title>
 	<!-- meta -->
-	<meta name="keywords" content="头部导航二级下拉菜单,学大前端" />
-	<meta name="description" content="学大前端微信公众号，头部导航二级下拉菜单练习！" />
+	<meta name="keywords" content="头部导航二级下拉菜单及banner幻灯片,学大前端" />
+	<meta name="description" content="学大前端微信公众号，头部导航二级下拉菜单及banner幻灯片练习！" />
 	<!-- favicon -->
 	<link type="image/x-icon" rel="shortcut icon" href="templets/default/images/favicon.ico" >
 	<!-- main.css | 页面主体样式 -->
